--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -21,11 +21,11 @@
 
 </thead>
 
- <span class="fr" onclick="$('.dataTables_filter input').val('').keyup();"> &nbsp;&nbsp;Reset&nbsp;</span>
+ <span class="fr btnp" style="margin-right:5px" onclick="$('.dataTables_filter input').val('').keyup();"> &nbsp;&nbsp;Reset&nbsp;</span>
        <%= select_tag :abdc,
                       options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["Choose",""])),
                       {id: "mySelect",style: "width:150px",class: "fr"} %>
-                      <div class="cl"></div>
+                      <div class="cl"></div><br/><br/>
    
        
 <tbody>
