--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -173,26 +173,7 @@ $(function(){
         <%= image_tag "/images/icons/exchange.png",{width: "20", onclick: "$('td#right-panel').slideToggle();"} %>
      </td>
      <td id="right-panel" valign="top" align="left">
-        <ul class="vls">
-            <li><img src="images/icons/org_todosb.png" width="14"/><h6><b>Todos</b></h6></li>
-            <li><br>
-                <a href="#"><b>To Inform Student</b></a><br/>
-                <small>Ask Hari ( IN 10098 ) & Inquir...</small>
-            </li>
-            <li>
-                <a href="#"><b>To Inform Student</b></a><br/>
-                <small>Ask Hari ( IN 10098 ) & Inquir...</small>
-            </li>
-            <li>
-                <a href="#"><b>To Inform Student</b></a><br/>
-                <small>Ask Hari ( IN 10098 ) & Inquir...</small>
-            </li>
-            <li>
-                <a href="#"><b>To Inform Student</b></a><br/>
-                <small>Ask Hari ( IN 10098 ) & Inquir...</small>
-            </li>
-            
-        </ul>
+        <%= render "shared/todos" %>
         <br/>
         <ul class="vls">
             <li><img src="images/icons/org_calenderb.png" width="14"/><h6><b>Calender</b></h6></li>
