--- a/app/views/registrations/_course.html.erb
+++ b/app/views/registrations/_course.html.erb
@@ -19,7 +19,7 @@
     <li><label>Status</label>: <span id="reg_status_<%= i.id %>" class='ref_no'>
                           <h4>[ <%= i.application_status.name rescue "Unknown" %> ]</h4>
                         </span>
-                        <span class="a1" onclick="regAppStatus(this,'#status_select_<%= i.id %>');">change</span>
+                        <span class="toggler" onclick="regAppStatus(this,'#status_select_<%= i.id %>');">change</span>
    </li>
     <span id="status_select_<%= i.id %>" style="display:none;">
       <%= render 'application_statuses/change_status' %>
