--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,7 +104,7 @@ input[type=text]:hover,input[type=text]:visited,
 input[type=password]:hover,input[type=password]:visited,
 input[type=file]:hover,input[type=file]:visited{box-shadow: 1px 1px 1px 1px #EFEFEF inset;}
 input[type=text]:focus,input[type=password]:focus,textarea:focus{border-color:#2A88C8;box-shadow:0 0 2px rgba(82, 168, 236, 0.5)}
-textarea{width:96%;border-radius:1px;border:1px solid #CACDD2;box-shadow: 1px 1px 5px #CACDD2 inset;padding:3px 5px 2px 10px;font-size:14px}
+textarea{width:96%;border-radius:1px;border:1px solid #CACDD2;box-shadow: 1px 1px 5px #CACDD2 inset;padding:3px 5px 2px 10px;font-size:14px;font-family:centuryGothic;}
 .ipt{border-radius:1px;height:24px;padding:3px 5px 2px 10px;width:200px !important;font-size:14px;background:#F0F0F0;border:1px solid #F0F0F0;}
 .caltf,.datepicker {background: #fff url(/images/icons/calendar1.png) 98% no-repeat;padding-right:25px !important;cursor:pointer;width:145px !important;}
 .dateTimeField{background: #fff url(/images/icons/datetime.png) 98% no-repeat !important;padding-right:25px !important;cursor:pointer;width:145px !important;}
