--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -66,15 +66,17 @@ $(function(){
                       <%= f.file_field :image %>   
                     </div>
                     <div align="center">
-                    <h3>
-                    -- OR --
-                    </h3>
+                    <div style="font-size:11px">
+      <b>              -- OR --</b>
+</div>
                     </div>
                     <div class="fbox">
                       <%= f.label :remote_image_url %>
                       <%= f.text_field :remote_image_url %>   
                     </div>
-                    <%= f.submit "Upload", {class: "btnp"} %>
+                    <input type="button" value="Close" name="commit" class="btns fr bClose"/>
+					<%= f.submit "Upload", {class: "btnp fr"} %>
+					<div class="cl"></div>
                     <% end %>
                  </div>
 
