actions tooltip application notes

--- a/app/views/programmes/_note.html.erb
+++ b/app/views/programmes/_note.html.erb
@@ -1,18 +1,23 @@
 <% @programme.notes.each do |note| %>
-          
-           <div class="brg0"> </div>
+
            <br/>
            <% u = note._created_by %>
            <%= image_tag((u.image? ? u.image_url : "/images/icons/user.png"),
                                {width: "40",
-                                height: "40",
-                                class: "imgb"}) %>
-           <h6>
+                                class: "imgb fl",
+                                style: "margin-right:10px;"}) %>
+           <span style="color:#999;padding-top:10px;">
            <%= note.content %>
-           </h6>
-           <li>
-          <%= link_to note._created_by.first_name,"#" %> &nbsp;&nbsp; <%= note.created_at.strftime("%A, %F %R %p") rescue "Unknown" %></li>
-         
-         <br/>
-          
+           </span>
+           <br/>
+           <br/>
+
+          <%= link_to note._created_by.first_name,"#" %> 
+          &nbsp;&nbsp; 
+          <%= note.created_at.strftime("%A, %F %R %p") rescue "Unknown" %>
+<br/>
+<br/>
+<div class="brg0"></div>
+
 <% end %>
+
