--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -14,6 +14,8 @@
   <tr>
       <th>
       <%= check_box_tag "master",nil,false,{id: "master_check",class:"nowrap",checked: false, onclick: "toggleAllCheck(this,'#{_id}');"} %>
+      </th>
+      <th>
       <%= label_tag :actions %>
       </th>
       <% @cols.each do |i| %>
@@ -30,13 +32,17 @@
 
 
 </thead>
-
-       <span class="fr btnp" style="margin-left:5px"  onclick="$('.dataTables_filter input').val('').keyup();"> &nbsp;&nbsp;Reset&nbsp;</span>
+<%= image_tag "/images/icons/info.png",{class: "fr tooltip",
+                                        title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
+       <span class="fr btnp" style="margin-left:10px"  onclick="$('.dataTables_filter input').val('').keyup();">
+       Reset
+       </span>
+       
 
        <%= select_tag :abdc,
                       options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["Choose",""])),
                       {id: "mySelect",style: "width:150px",class: "fr"} %><br/><br/>
-
+       
 <tbody>
 
 </tbody>
