--- a/app/views/enquiries/_timeline.html.erb
+++ b/app/views/enquiries/_timeline.html.erb
@@ -1,25 +1,21 @@
 <% @timelines.each do |t| %>
 <br/>
   <% u = User.find(t.user_id) %>
-  <%= image_tag (u.image? ? u.image_url : "/images/icons/user.png"),{class: "fl imgb", width: "40"} %>
-  &nbsp;&nbsp;&nbsp;
+  <%= image_tag (u.image? ? u.image_url : "/images/icons/user.png"),
+                {class: "fl imgb", 
+                 width: "40",
+                 style: "margin-right:10px;"} %>
   <h4>
   <%= t.comment %>
   </h4>
   <br/>
-  &nbsp;&nbsp;&nbsp;
   <span style="color:#999;">
   <%= t.desc.html_safe %>
   </span>
   
   <br/>
   <br/>
-
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          &nbsp;&nbsp;&nbsp
-
-          <%= link_to t.user_name,"#" %> &nbsp;&nbsp; <%= t.created_at.strftime("%A, %F %R %p") %>
+  <%= link_to t.user_name,"#" %> &nbsp;&nbsp; <%= t.created_at.strftime("%A, %F %R %p") %>
 
 
   
