--- a/app/views/email_templates/index.html.erb
+++ b/app/views/email_templates/index.html.erb
@@ -47,6 +47,7 @@
 $(function(){
   setColorsFromSession();
   $("ul.tab-menus li.email_template").trigger('click');
+  activeMM("emailMM");
  });
 </script>
  
