--- a/app/views/email_templates/show.html.erb
+++ b/app/views/email_templates/show.html.erb
@@ -3,3 +3,10 @@
 
 <%= link_to 'Edit', edit_email_template_path(@email_template) %> |
 <%= link_to 'Back', email_templates_path %>
+
+<script>
+$(function(){
+  setColorsFromSession();
+  activeMM("emailMM");
+ });
+</script>
