users access control

--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -45,7 +45,7 @@ $(function(){
                 <div class="frbox">
                     <label>Role</label>
                     <%= select_tag "role_id",
-                                   options_from_collection_for_select(Role.order(:name), "id", "title_name"),
+                                   options_from_collection_for_select([current_user.role], "id", "title_name"),
                  {:prompt => "--Role--",
                  id: "role_select",
                  onclick: "$('#manage').hide();$('#manage').slideToggle();$('#permissions_container').hide();"} %>
