--- a/app/views/users/_menus.html.erb
+++ b/app/views/users/_menus.html.erb
@@ -1,17 +1,24 @@
 <ul class="tab-menus1">
+<% if can? :read,User, id: current_user.id %>
 <li class="all_users"> 
 <%= link_to "All Users", users_path,{size: 12} %>
 </li>
+<% end %>
+<% if can? :create,User, id: current_user.id %>
 <li class = "invite_users">
 <%= link_to "Invite Users", new_user_invitation_path %>
 </li>
+<% end %>
+<% if can? :read,Role %>
 <li class = "roles_path">
 <%= link_to "Roles",roles_path %>
 </li>
+<% end %>
+<% if can? :create,Role %>
 <li class="new_role">
 <%= link_to "Add Role",new_role_path %>
 </li>
-
+<% end %>
 <li class="view_user" style="display:none">
 
 </li>
