--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -24,7 +24,7 @@ $('#fade').cycle();
 <div id="bg1">
 <div id="login-box">
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-<table cellpadding="10" cellspacing="0" width="100%" height="100">
+<table cellpadding="10" cellspacing="0" width="100%">
 <tr><td colspan="2" align="left">
 <%= f.error_notification %>
 </td></tr>
