--- a/app/views/users/invitations/edit.html.erb
+++ b/app/views/users/invitations/edit.html.erb
@@ -1,45 +1,62 @@
-  <%= stylesheet_link_tag    "application" %>
-<div class="tab-container" align="center">
-<div class="tab-content" style="display:block">
-<div class="boxp box-theme-ch accept_invite">
-<br/>
-<br/>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Set your password</title>
+  <%= stylesheet_link_tag    "home" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+ 
+  
+  <!--p class="notice"><%= notice %></p-->
+  <!--p class="alert"><%= alert %></p-->
+</head>
+<body>
+<script type="text/javascript">
+$(document).ready(function(){
+$('#fade').cycle();
+});
+</script>
+<div id="fade">
+<img src="/images/b1.jpg" class="theme"/>
+<img src="/images/b2.jpg" class="theme"/>
+<img src="/images/b3.jpg" class="theme"/>
+</div>
+<div id="bg1">
+<div id="login-box">
+<%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
+<%= devise_error_messages! %>
+<%= f.hidden_field :invitation_token %>
+<table cellpadding="10" cellspacing="0" width="100%">
+<tr>
+<td align="left" valign="top" class="fboxw">
+<%= f.input :first_name %>
+</td>
+</tr>
+<tr>
+<td align="left" valign="top"  class="fboxw">
+<%= f.input :surname %>
+</td>
+</tr>
+<tr>
+<td align="left" valign="top"  class="fboxw">
+<%= f.input :password %>
+</td>
+</tr>
+<tr>
+<td align="left" valign="top"  class="fboxw">
+<%= f.input :password_confirmation, label: "Retype Password" %>
+</td>
+</tr>
+<tr>
+<td align="left" valign="top"   class="fboxw">
+<label>&nbsp;</label>
+<%= f.submit t("devise.invitations.edit.submit_button"),{class: "btnp"} %>
+</td>
+</tr>
+</table>
+<% end %>
+</div>
+</div>
+</body>
+</html>
 
-<br/>
-<br/>
-<br/>
-    <div class="cols" >
-    
-        <div class="col6">
-        <h2><%= t 'devise.invitations.edit.header' %></h2>
-        <br/>
-        <br/>
-        <br/>
-    
-        <%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
-          <%= devise_error_messages! %>
-          <%= f.hidden_field :invitation_token %>
-          <div class="frbox1">
-          <%= f.input :first_name %>
-          </div>
-          <div class="frbox1">
-          <%= f.input :surname %>
-          </div>
-          <div class="frbox1">
-          <%= f.input :password %>
-          </div>
-          <div class="frbox1">
-          <%= f.input :password_confirmation, label: "Retype Password" %>
-          </div>
-          <div class="frbox1">
-          <label> &nbsp; </label>
-          <%= f.submit t("devise.invitations.edit.submit_button"),{class: "btnp"} %>
-          </div>
-        <% end %>
-        </div>
-        
-
-    </div>
-</div>
-</div>
-</div>
