--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,7 +140,7 @@ input[type=radio]{padding-right:5px}
 .frbox label:first-child{width:120px !important;display:inline-block; white-space:nowrap;text-align:right;font-weight:normal !important;color:#666;vertical-align:top}
 .frbox input,.frbox select,.frbox textarea{margin-left:15px}
 .mand label{color: #c24255 !important;}
-.close-icon{float:right;border:1px solid #ccc;padding:0 5px 2px 5px;font-size:11px;background:#ccc;border-radius:1000px;color:#444444;cursor:pointer}
+.close-icon{float:right;border:1px solid #ccc;padding:0 5px 2px 5px;font-size:11px;color:#444444;cursor:pointer;background:#fff}
 .close-icon:hover{cursor:pointer;color:#222}
 .remove-icon{background:#AD0707;color:#fff;font-weight:bold;padding:0 5px 1px 5px;margin-right:3px;border-radius:5px}
 #note-action .fbox{height:auto}
@@ -331,7 +331,7 @@ div.dataTables_wrapper .ui-widget-header{background:#EAEAEA !important; }
 .pop-head {padding:15px 15px 5px 15px;font-size:14px}
 .pop-content{padding:5px 15px 10px 15px }
 .popuplayout{width:500px;background:#fff}
-.popupc{background:#fff;padding:15px 15px 10px 15px;font-size:12px;}
+.popupc{background:#fff;padding:10px 15px 10px 15px;font-size:12px;}
 /* POPUP BOX - ENDS */
 
 /* FONT SIZE & WEIGHT - STARTS */
@@ -413,7 +413,7 @@ body > * {visibility: hidden;}
 
 /* POPUP - STARTS */
 .popuptitlemsg{font-size:14px;font-weight:bold;color:#444;padding:5px 10px 5px 10px;background:#d3d7cf} 
-.popuptitle{font-size:14px;font-weight:bold;color:#444;padding:5px 10px 5px 10px;background:#d3d7cf} 
+.popuptitle{font-size:14px;font-weight:bold;color:#444;padding:5px 10px 5px 10px;background:#fff;margin:5px 10px 5px 10px;border-bottom:1px solid #E1E1E1}
 .addNewPop {padding: 0;border: 1px solid #ccc;box-shadow: 0 0 5px #ccc;border-radius: 5px;display: none;position: absolute;z-index: 100000000000;
 background: #fff;overflow:hidden}
 .popupc{padding:25px 25px 25px 25px;text-align:left !important;font-size:16px;}
