Right panel and themebox
Right panel and themebox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -578,3 +578,8 @@ border:1px solid #3D3D3D;background:#3D3D3D;color:#FFFFFF;padding:5px;line-heigh
 .abs-plus-box:hover .abs-plus{display:inline;}
 .abs-plus:hover{background:#ccc;cursor:pointer}
 .rel{position:relative}
+
+/* OVERRIDE - STARTS */
+.boxstheme{width:auto}
+#right-panel{width:245px !important;}
+/* OVERRIDE - ENDS */
