--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,7 +140,8 @@ input[type=radio]{padding-right:5px}
 .frbox label:first-child{width:120px !important;display:inline-block; white-space:nowrap;text-align:right;font-weight:normal !important;color:#666;vertical-align:top}
 .frbox input,.frbox select,.frbox textarea{margin-left:15px}
 .mand label{color: #c24255 !important;}
-.close-icon{float:right;border:1px solid #ccc;padding:0 5px 2px 5px;font-size:11px;color:#444444;cursor:pointer;background:#fff}
+.close-icon{float:right;padding:0 5px 2px 5px;color:#444444;cursor:pointer;background:#fff;
+border:0;font-size:15px;font-family:"Comic Sans MS", cursive}
 .close-icon:hover{cursor:pointer;color:#222}
 .remove-icon{background:#AD0707;color:#fff;font-weight:bold;padding:0 5px 1px 5px;margin-right:3px;border-radius:5px}
 #note-action .fbox{height:auto}
