--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -9,7 +9,7 @@
 <%= link_to "New Registration", "#", {class: "btnpd"} %>
 <% end %>
 <!---------------------------------------------------------------->
-
+<div class="datatable-scroll">
 <table id='<%= _id %>' class="display" data-source="<%= registrations_url(format: "json") %>">
 <thead>
   <tr>
@@ -48,6 +48,7 @@
 </tbody>
 
 </table>
+</div>
 <br/>       
             <!----------------------- Group Assign ---------------------------->
             <% div_id = "group_assign_to_" + _id %>
