--- a/app/views/users/invitations/edit.html.erb
+++ b/app/views/users/invitations/edit.html.erb
@@ -16,20 +16,20 @@
         <br/>
         <br/>
     
-        <%= simple_form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
+        <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f| %>
           <%= devise_error_messages! %>
           <%= f.hidden_field :invitation_token %>
           <div class="frbox1">
-          <%= f.input :first_name %>
+            <%= fs(f,"first_name","text_field",1) %>
           </div>
           <div class="frbox1">
-          <%= f.input :surname %>
+            <%= fs(f,"surname","text_field",1) %>
           </div>
           <div class="frbox1">
-          <%= f.input :password %>
+            <%= fs(f,"password","password_field",1) %>
           </div>
           <div class="frbox1">
-          <%= f.input :password_confirmation, label: "Retype Password" %>
+            <%= fs(f,"password_confirmation","password_field",1, "Retype Password") %>
           </div>
           <div class="frbox1">
           <label> &nbsp; </label>
