--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,7 +49,7 @@ small{font-size: 11px;color:#666666;font-weight:normal;}
 /* DEFAULT STYLE - ENDS */
 
 /* LAYOUT - STARTS */
-#wrapper{max-width:1300px;min-width:1200px;margin:0 auto 0 auto;padding:0;border:1px solid #CACACA;box-shadow:0 0 4px #ccc;box-shadow:0 0 10px #ccc;border-radius:0;overflow:hidden;}
+#wrapper{max-width:1300px;min-width:1300px;margin:0 auto 0 auto;padding:0;border:1px solid #CACACA;box-shadow:0 0 4px #ccc;box-shadow:0 0 10px #ccc;border-radius:0;overflow:hidden;}
 #header{padding:10px 2% 15px 2%;width:96%; border-bottom:5px solid #00336C;color:#fff;position:relative}
 #left-panel{position:absolute;background:#CCC;height:auto;box-shadow: 3px 0 6px #ccc;border-right:1px solid #CACACA;}
 #right-panel{height:auto;width:245px !important;padding-left:10px;background:#fff}
@@ -583,5 +583,6 @@ border:1px solid #3D3D3D;background:#3D3D3D;color:#FFFFFF;padding:5px;line-heigh
 /* OVERRIDE - STARTS */
 .boxstheme{width:auto}
 #right-panel{width:245px !important;}
-.display{display:block;overflow:auto;width:820px !important;}
+.display{display:block;overflow:auto;}
+.dataTables_wrapper{width:820px;}
 /* OVERRIDE - ENDS */
