--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -585,4 +585,5 @@ border:1px solid #3D3D3D;background:#3D3D3D;color:#FFFFFF;padding:5px;line-heigh
 #right-panel{width:245px !important;}
 .display{display:block;overflow:auto;}
 .dataTables_wrapper{width:820px;}
+.display tr td{border:5px solid #000;width:25% !important} 
 /* OVERRIDE - ENDS */
