--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -22,33 +22,27 @@ $('#fade').cycle();
 <img src="/images/b3.jpg" class="theme"/>
 </div>
 <div id="bg1">
-<div id="login-box">
+<div id="login-box" style="width:450px">
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+<center><h2 style="color:#fff">Forgot Your Password?</h2></center>
 <table cellpadding="10" cellspacing="0" width="100%">
-<h2>Forgot Your Password?</h2>
 <tr>
-    <td align="left" valign="bottom" class="tw" style="padding:10px 0 0 20px">
-     <%= f.label :email %>
+		  <td align="left" valign="bottom" class="tw" width="50">
+     <%= f.label :email %></td>
+		  <td align="left" valign="bottom" class="tw">
      <%= f.text_field :email %>
-      
-    </td>
-    <td align="center" valign="middle" rowspan="2" width="90" class="lb pad10">
+	 <div align="left" class="white-link">
+<%= render "devise/shared/links" %>
+</div>
+	 </td>
+          
+    <td align="center" valign="middle"  width="90" class="lb pad10">
     <span class="th35">
          <%= f.submit 'Reset', :class => "white-button"%>
     </span>
     </td>
 
 
-</tr>
-<tr>
-<td class="white-text">
-&nbsp;
-</td>
-<td>
-<div align="right" class="white-link">
-<%= render "devise/shared/links" %>
-</div>
-</td>
 </tr>
 </table>
 <% end %>
